--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,12 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    // StringUtils
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 
     // JPA
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     // MySQL
     runtimeOnly 'com.mysql:mysql-connector-j'
 
@@ -37,8 +39,8 @@ dependencies {
     // Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
