강의 목록 추가, 조회 API

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 }
 
 dependencies {
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.5.2'
     // StringUtils
     implementation 'org.apache.commons:commons-lang3:3.12.0'
 
