--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=9000
+#server.port=9000
 spring.datasource.url=jdbc:mysql://localhost:3306/academy
 spring.datasource.username=root
-spring.datasource.password=@wjdals96
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
